# er1_dsp

./: CMakeLists.txt  README.md
inc/er1_dsp/: Amp.h  AnalogVoice.h  AudioVoice.h  Channel.h  Constants.h  Delay.h  ER1PCMSamples.h  Envelope.h  LowBoost.h  Modulator.cpp  Modulator.h  Noise.h  Oscillator.h  SampleAndHold.h  TiltFilter.cpp  TiltFilter.h  Types.h  Voice.h  Waveshapes.h
inc/er1_dsp/sounds/: AnalogSound.h  AudioSound.h  BaseSound.h  PCMSound.h
inc/er1_dsp/voices/: AnalogVoice.h  AudioVoice.h  BaseVoice.h
src/: Amp.cpp  AnalogVoice.cpp  AudioVoice.cpp  Channel.cpp  Delay.cpp  ER1PCMSamples.cpp  Envelope.cpp  LowBoost.cpp  Modulator.cpp  Noise.cpp  Oscillator.cpp  SampleAndHold.cpp  TiltFilter.cpp  Voice.cpp
src/sounds/: AnalogSound.cpp  AudioSound.cpp  PCMSound.cpp
src/voices/: AnalogVoice.cpp  AudioSound.cpp  AudioVoice.cpp
test/: AllTests.cpp  CMakeLists.txt
test/tests/: TestHelpers.cpp  TestHelpers.h  common_constants.h  test_AnalogSound.h  test_Delay.h  test_Envelope.h  test_LowBoost.h  test_Noise.h  test_Oscillator.h  test_PCMSound.h  test_SampleAndHold.h  test_TiltFilter.h  test_Voice.h
